fixed that tooltips were behind the module

--- a/client/css/editor/sidebar.css
+++ b/client/css/editor/sidebar.css
@@ -9,7 +9,7 @@
   right: 0;
   top: calc(var(--editToolbarHeight) - 1px);
   bottom: 0;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   flex-direction: column;
 }
