--- a/client/css/editor/toolbar.css
+++ b/client/css/editor/toolbar.css
@@ -6,7 +6,7 @@
   position: absolute;
   display: flex;
   background: var(--VTTblue);
-  z-index: 2;
+  z-index: 3;
   left: 0;
   right: 0;
 }
